--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,8 @@ dependencies {
 
     implementation 'com.facebook.android:facebook-login:[4,5)'
 
+    implementation 'com.intuit.sdp:sdp-android:1.0.5'
+
 
     implementation "com.google.firebase:firebase-core:$FIREBASE_VERSION"
     implementation "com.google.firebase:firebase-messaging:$FIREBASE_VERSION"
