--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,8 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
 
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+
 
     implementation "com.google.firebase:firebase-core:$FIREBASE_VERSION"
     implementation "com.google.firebase:firebase-messaging:$FIREBASE_VERSION"
