--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,10 +51,11 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
 
-
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.github.ittianyu:BottomNavigationViewEx:1.2.4'
 
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'com.github.ittianyu:BottomNavigationViewEx:1.2.4'
 
 
     implementation "com.google.firebase:firebase-core:$FIREBASE_VERSION"
